Align center fix on IOS

--- a/public/dev/less/mobile/title-block.less
+++ b/public/dev/less/mobile/title-block.less
@@ -103,7 +103,7 @@
 
     &__text-wrap{
       flex-direction: column;
-      margin: 0 auto;
+      align-items: center;
       max-width: none;
     }
     
@@ -137,7 +137,6 @@
     }
 
     &__col1{
-      margin: 0 auto;
       flex-direction: column-reverse;
       align-items: flex-end;
     }
